# computer_vision

./: .gitignore  CMakeLists.txt
data/: dst2.txt  dst_in.txt  external.txt  gcp.txt  grand.txt  img_locations.txt  intrinsic.txt  png_locations.txt
doc/: README.md  SUMMARY.md  实习报告.mdown
doc/module/: README.md  calibration_solution.md  control_point_detect.md  feature_detect.md  sparse_solution.md
inc/: calibration_solution.h  feature_detect.h
sfm/: CMakeLists.txt  calibration_solution.h  control_point_detect.h  feature_detect.h  sfm.h  sparse_solution.h
sfm/calibration_solution/: calibration_solution.cpp  calibration_solution.h
sfm/control_point_detect/: control_point_detect.cpp  control_point_detect.h
sfm/feature_detect/: feature_detect.cpp
sfm/sparse_solution/: sparse_solution.cpp  sparse_solution.h
src/: CMakeLists.txt  calibration_solution.cpp  control_point_detect.cpp  feature_detect.cpp
test/: CMakeLists.txt  Eigen_test.cpp  calibration_test.cpp  feature.cpp  feature_test.cpp  hough_circle_test.cpp  module_test.cpp  point_mark_test.cpp  sparse_test.cpp
work/: CMakeLists.txt  sparse.cpp
